infra/k8s_prod/chat-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-server
  template:
    metadata:
      labels:
        app: chat-server
    spec:
      containers:
        - name: chat-server
          image: sapphirepencil/chat-server
---
apiVersion: v1
kind: Service
metadata:
  name: chat-server-srv
spec:
  type: ClusterIP
  selector:
    app: chat-server
  ports:
    - name: chat-server
      protocol: TCP
      port: 3000
      targetPort: 3000
