infra/k8s_prod/chat-server-service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-server-nodeport-srv
  labels:
    app: chat-server
spec:
  type: NodePort
  ports:
    - port: 3001
  selector:
    app: chat-server
