infra/k8s_prod/test-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      containers:
        - name: test-api
          image: sapphirepencil/test-api

---
apiVersion: v1
kind: Service
metadata:
  name: test-api-srv
spec:
  type: ClusterIP
  selector:
    app: test-api
  ports:
    - name: test-api
      protocol: TCP
      port: 3000
      targetPort: 3000
